--- a/style.css
+++ b/style.css
@@ -8,4 +8,13 @@ body {
     font-family: "Madimi One", sans-serif;
     font-weight: 400;
     font-style: normal;
+    color: burlywood;
 }
+
+.wrapper {
+    max-width: 1200px;
+}
+
+
+
+
