--- a/style.css
+++ b/style.css
@@ -11,11 +11,56 @@ body {
     color: burlywood;
     display: flex;
     justify-content: center;
-    background-image: url("pancakes-background.jpg");
-    background-position: center;
-    background-size: cover;
 }
 
+.wrapper {
+    background-image: url("pancakes-background.jpg");
+    background-position: center;
+    background-size: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-columns {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+main {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+aside {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.background {
+    border-radius: 15px 15px 15px 15px;
+    background-color: #692e14;
+    padding: 10px 10px 10px 10px;
+}
+
+.instructions {
+    width: 50%;
+}
+
+.footer-box {
+    width: 12%;
+}
+
+.flex-box {
+    display: flex;
+    justify-content: center;
+}
+
+.margin-padding-list {
+    padding-left: 16px;
+}
 
 
 
