--- a/style.css
+++ b/style.css
@@ -14,9 +14,11 @@ body {
 }
 
 .wrapper {
-    background-image: url("pancakes-background.jpg");
+    max-width: 100%;
+    height: 100vh;
+    background-image: url("pancake.jpg");
     background-position: center;
-    background-size: auto;
+    background-size: cover;
     display: flex;
     flex-direction: column;
 }
@@ -39,10 +41,12 @@ aside {
     align-items: center;
 }
 
-.background {
-    border-radius: 15px 15px 15px 15px;
-    background-color: #692e14;
-    padding: 10px 10px 10px 10px;
+.title {
+    margin: 40px 0 0 0;
+}
+
+.main-title {
+    font-size: 30px;
 }
 
 .instructions {
@@ -50,7 +54,14 @@ aside {
 }
 
 .footer-box {
-    width: 12%;
+    width: 140px;
+    margin: 15px 0 40px 0;
+}
+
+.background {
+    border-radius: 15px 15px 15px 15px;
+    background-color: #692e14;
+    padding: 10px 10px 10px 10px;
 }
 
 .flex-box {
