--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
     background-image: url("pancake.jpg");
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
 }
@@ -29,13 +31,13 @@ body {
 }
 
 main {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
 
 aside {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -55,7 +57,8 @@ aside {
 
 .footer-box {
     width: 140px;
-    margin: 15px 0 40px 0;
+    margin-top: 15px;
+    padding-bottom: 30px;
 }
 
 .background {
