--- a/style.css
+++ b/style.css
@@ -11,11 +11,8 @@ body {
     color: burlywood;
     display: flex;
     justify-content: center;
-    background-image: url("pancake.jpg");
-    background-position: center;
+    background: url("pancake.jpg") no-repeat center fixed;
     background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
 }
 
 .wrapper {
@@ -73,10 +70,3 @@ aside {
 .margin-padding-list {
     padding-left: 16px;
 }
-
-
-
-
-
-
-
