--- a/style.css
+++ b/style.css
@@ -44,12 +44,12 @@ aside {
 }
 
 .main-title {
-    font-size: 45px;
+    font-size: 35px;
 }
 
 .instructions {
     width: 90%;
-    margin-top: 70px;
+    margin-top: 90px;
 }
 
 .instructions-title {
@@ -83,8 +83,7 @@ aside {
 
 .footer-box {
     width: 100%;
-    margin-top: 15px;
-    padding-bottom: 30px;
+    margin: 50px 0 50px 0;
 }
 
 .footer-text {
@@ -117,7 +116,7 @@ aside {
 
     .instructions {
         width: 90%;
-        margin-top: 50px;
+        margin-top: 150px;
     }
 
     .ingredients {
@@ -132,7 +131,7 @@ aside {
     }
 
     .instructions {
-        margin-top: 50px;
+        margin-top: 100px;
     }
 
     .ingredients {
