--- a/style.css
+++ b/style.css
@@ -9,14 +9,17 @@ body {
     font-weight: 400;
     font-style: normal;
     color: burlywood;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url("pancakes1.jpg") no-repeat center fixed;
+    background-size: contain;
 }
 
 .wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url("pancake.jpg") no-repeat center fixed;
-    background-size: cover;
 }
 
 .main-columns {
@@ -49,7 +52,7 @@ aside {
 
 .instructions {
     width: 90%;
-    margin-top: 90px;
+    margin-top: 150px;
 }
 
 .instructions-title {
