--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    width: 100%;
     font-family: "Madimi One", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -17,89 +18,111 @@ body {
 
 .wrapper {
     width: 2560px;
+    height: 1440px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background: url("pancakes2.jpg") no-repeat center fixed;
-    background-size: contain;
+    background-size: cover;
 }
 
 .main-columns {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    margin: 100px 0 50px 0;
+    margin: 100px 0 0 0;
 }
 
 main {
     width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 aside {
     width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .title {
     width: 100%;
-    margin: 25px 0 0 0;
+    margin: 15px 0 0 0;
 }
 
 .main-title {
-    font-size: 120px;
+    font-size: 90px;
+}
+
+.description {
+    width: 100%;
+}
+
+.description-title {
+    font-size: 40px;
+}
+
+.description-box {
+    width: 40%;
+    height: 100%;
+    margin-left: 65px;
+}
+
+.description-text {
+    font-size: 32px;
 }
 
 .instructions {
-    width: 90%;
-    margin-top: 150px;
+    width: 100%;
+}
+
+.instructions-box {
+    width: 95%;
 }
 
 .instructions-title {
-    font-size: 70px;
+    font-size: 50px;
 }
 
 .ingredients {
-    width: 95%;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
-    margin-top: 70px;
 }
 
 .ingredients-box {
-    width: 25%;
+    width: 40%;
+    margin-right: 65px;
 }
 
 .ingredients-title {
-    font-size: 70px;
+    font-size: 40px;
 }
 
 .ingredients-list-item {
-    margin-bottom: 5px;
-    font-size: 35px;
+    margin-bottom: 2px;
+    font-size: 33px;
 }
 
 .instructions-list-item {
-    margin-bottom: 5px;
-    font-size: 35px;
-}
-
-.footer-box {
-    width: 100%;
-    margin: 50px 0 50px 0;
-}
-
-.footer-text {
-    width: 100%;
-    font-size: 75px;
+    margin-bottom: 2px;
+    font-size: 25px;
 }
 
 .background {
     border-radius: 15px 15px 15px 15px;
-    box-shadow: 2px 3px 3px 2px black;
+    box-shadow: 2px 2px 2px 2px black;
+    background-color: #692e14;
+    padding: 10px 10px 10px 10px;
+}
+
+.background-instructions {
+    border-radius: 15px 15px 0 0;
+    box-shadow: 3px 0 3px 0 black;
     background-color: #692e14;
     padding: 10px 10px 10px 10px;
 }
@@ -110,7 +133,7 @@ aside {
 }
 
 .margin-padding-list {
-    padding-left: 45px;
+    padding-left: 40px;
 }
 
 @media (max-width: 1700px) {
