--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-    width: 100%;
     font-family: "Madimi One", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -13,40 +12,42 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    background-color: #fdd39b;
 }
 
 .wrapper {
-    width: 2560px;
-    height: 1440px;
+    width: 1600px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background: url("pancakes2.jpg") no-repeat center fixed;
-    background-size: cover;
+    background-size: 1600px;
+    overflow: auto;
+}
+
+.image {
+    display: none;
 }
 
 .main-columns {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
-    margin: 100px 0 0 0;
+    margin-top: 90px;
 }
 
 main {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: row;
 }
 
 aside {
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    margin-top: 70px;
 }
 
 .title {
@@ -55,29 +56,30 @@ aside {
 }
 
 .main-title {
-    font-size: 90px;
+    font-size: 40px;
 }
 
 .description {
+    display: flex;
     width: 100%;
 }
 
 .description-title {
-    font-size: 40px;
+    font-size: 30px;
 }
 
 .description-box {
     width: 40%;
-    height: 100%;
-    margin-left: 65px;
+    margin-left: 35px;
 }
 
 .description-text {
-    font-size: 32px;
+    font-size: 18px;
 }
 
 .instructions {
     width: 100%;
+    margin-top: 100px;
 }
 
 .instructions-box {
@@ -85,7 +87,7 @@ aside {
 }
 
 .instructions-title {
-    font-size: 50px;
+    font-size: 25px;
 }
 
 .ingredients {
@@ -96,21 +98,21 @@ aside {
 
 .ingredients-box {
     width: 40%;
-    margin-right: 65px;
+    margin-right: 35px;
 }
 
 .ingredients-title {
-    font-size: 40px;
+    font-size: 30px;
 }
 
 .ingredients-list-item {
     margin-bottom: 2px;
-    font-size: 33px;
+    font-size: 15px;
 }
 
 .instructions-list-item {
     margin-bottom: 2px;
-    font-size: 25px;
+    font-size: 15px;
 }
 
 .background {
@@ -133,33 +135,57 @@ aside {
 }
 
 .margin-padding-list {
-    padding-left: 40px;
+    padding-left: 25px;
 }
 
-@media (max-width: 1700px) {
+@media (max-width: 1200px) {
+    aside {
+        margin: 0;
+    }
+
     .main-columns {
+        margin-top: 650px;
+    }
+
+    .description {
+        justify-content: center;
+    }
+
+    .description-box {
+        width: 60%;
+    }
+
+    .ingredients {
+        justify-content: center;
+    }
+
+    .ingredients-box {
+        width: 60%;
+    }
+}
+
+@media (max-width: 992px) {
+    .wrapper {
+        background: none;
+    }
+
+    .image {
+        width: 100%;
+        display: block;
+        margin-top: 30px;
+    }
+
+    .main-columns {
+        margin-top: 50px;
+    }
+
+    main {
         display: flex;
         flex-direction: column;
     }
 
-    .instructions {
-        width: 90%;
-        margin-top: 150px;
-    }
-
-    .ingredients {
-        width: 95%;
-        justify-content: flex-end;
-    }
-}
-
-@media (max-width: 1700px) {
-    .main-columns {
-        margin: 450px 0 50px 0;
-    }
-
-    .instructions {
-        margin-top: 150px;
+    .description-box {
+        margin: 0;
     }
 
     .ingredients {
@@ -168,9 +194,22 @@ aside {
     }
 
     .ingredients-box {
-        width: 387px;
         justify-content: flex-end;
-        margin-top: 100px;
+        margin: 75px 0 0 0;
+    }
+
+    .instructions {
+        margin-top: 95px;
+    }
+}
+
+@media (max-width: 550px) {
+    .description-box {
+        width: 95%;
+    }
+
+    .ingredients-box {
+        width: 95%;
     }
 }
 
@@ -178,10 +217,6 @@ aside {
     .ingredients {
         width: 100%;
         justify-content: center;
-    }
-
-    .ingredients-box {
-        width: 90%;
     }
 
     .footer-text {
