--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
 }
 
 .wrapper {
-    width: 1600px;
+    max-width: 1600px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -139,7 +140,7 @@ aside {
 }
 
 @media (max-width: 1200px) {
-    aside {
+    .instructions {
         margin: 0;
     }
 
@@ -164,7 +165,7 @@ aside {
     }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1024px) {
     .wrapper {
         background: none;
     }
