--- a/style.css
+++ b/style.css
@@ -16,13 +16,15 @@ body {
 }
 
 .background-image {
+    height: 100vh;
     background: url("pancakes2.jpg") no-repeat center fixed;
-    background-size: 100%;
+    background-size: cover;
     overflow: auto;
 }
 
 .wrapper {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,6 +36,7 @@ body {
 
 .main-columns {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     margin-top: 90px;
@@ -42,12 +45,14 @@ body {
 
 main {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
 }
 
 aside {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -74,6 +79,7 @@ aside {
 
 .description-box {
     width: 40%;
+    height: 75%;
     margin-left: 35px;
 }
 
@@ -102,6 +108,7 @@ aside {
 
 .ingredients-box {
     width: 40%;
+    height: 75%;
     margin-right: 35px;
 }
 
@@ -146,6 +153,7 @@ aside {
 
     .description-box {
         width: 60%;
+        height: 100%;
     }
 
     .ingredients {
@@ -154,6 +162,7 @@ aside {
 
     .ingredients-box {
         width: 60%;
+        height: 100%;
     }
 
     .instructions {
