--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@
     padding: 0;
 }
 
+html {
+    height: 100%;
+}
+
 body {
+    height: 100%;
     font-family: "Madimi One", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -16,11 +21,7 @@ body {
 }
 
 .background-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    height: 100%;
     background: url("pancakes2.jpg") no-repeat center fixed;
     background-size: cover;
     overflow: auto;
@@ -145,8 +146,18 @@ aside {
 }
 
 @media (max-width: 1200px) {
+    .background-image {
+        background: none;
+    }
+
+    .image {
+        width: 100%;
+        display: block;
+        margin-top: 30px;
+    }
+
     .main-columns {
-        margin-top: 650px;
+        margin-top: 120px;
     }
 
     .description {
@@ -173,16 +184,6 @@ aside {
 }
 
 @media (max-width: 1024px) {
-    .background-image {
-        background: none;
-    }
-
-    .image {
-        width: 100%;
-        display: block;
-        margin-top: 30px;
-    }
-
     .main-columns {
         margin-top: 50px;
     }
